--- a/0/index.html
+++ b/0/index.html
@@ -16,7 +16,7 @@
     <!--FIM CABEÇALHO-->
 
     <!--Cabecalho-->
-    <header>
+    <header background-image="url(img/destaque-brinde.png)">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -70,7 +70,6 @@
                     <a href="#"><li>Lupas</li></a>
                     <a href="#"><li>MousePads</li></a>
                     <a href="#"><li>Necessaires</li></a>
-                    <a href="#"><li>Novidades</li></a>
                     <a href="#"><li>Pinças</li></a>
                     <a href="#"><li>Pinceis para Maquiagem</li></a>
                     <a href="#"><li>Porta Batons</li></a>
@@ -208,19 +207,30 @@
 
     <!--footer-->
     <footer>
-        <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Produtos</a></li>
-            <li><a href="#">Orçamentos</a></li>
-            <li><a href="#">Quem somos</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-        <h5>© TODOS OS DIREITOS RESERVADOS 2017 | LR7 MARKETING MULTIMÍDIA</h5>
-        <h4>
-        Contatos: <br />
-        Fone: (011) 99999-9999<br />
-        Endereço: Avenida Paulista, 9000
-        </h4>
+        <div>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Orçamentos</a></li>
+                <li><a href="#">Quem somos</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </div>
+        <div style="float:left">
+            <h5>© 2017 LR7 MARKETING MULTIMÍDIA <br />TODOS OS DIREITOS RESERVADOS.</h5>
+        </div>
+        <div style="float:right; margin-top: 20px;">
+            Siga a LR7 nas Redes sociais<br />
+            <img src="#" alt="Facebook" name="Facebook">
+            <img src="#" alt="Twitter" name="Twitter">
+            <img src="#" alt="LinkedIn" name="LinkedIn">
+        </div>
+        <div style="float:right; margin-right:50px;">
+            <h6>Contatos: <br />
+            Fone: (011) 99999-9999<br />
+            Endereço: Avenida Paulista, 9000
+            </h6>
+        </div>
     </footer>
     <!--footer-fim-->
 
